# libfxcg

./: .gitattributes  .gitignore  COPYING  Dockerfile.toolchain  LICENSE  Makefile  Makefile.standard  README  README.md  TODO  addin.ld  crt0.s  eigensup.txt  logo.xcf  monoicon.eActIcon
.github/workflows/: windows-sdk.yml
Platform/: Prizm.cmake
docs/: howto-macos.md  howto-windows.md
docs/macos/: howto-macos.md  install.sh
example/: Makefile  clean.bat
example-make/: Makefile.old
example-make/src/: Makefile.am
example/example/: Makefile  Makefile.old  make.bat
example/src/: example.c
examples/: CompileNcurses  CompileWcalc  compile-python
examples/autotools/: Makefile.in  configure  configure.ac  missing
examples/autotools/src/: Makefile.am  Makefile.in
examples/autotools/src/example2/: main.cpp
examples/cmake/: CMakeLists.txt
include/: APP_syscalls.h  BFILE_syscalls.h  CONVERT_syscalls.h  HEAP_syscalls.h  LineEditors.hpp  ListView.hpp  MCS_syscalls.h  STATUS_ICONS.hpp  StrList.hpp  UI.hpp  alloca.h  app.h  asm.h  assert.h  byteswap.h  color.h  ctype.h  dirent.h  disp_tools.hpp  display.h  display_syscalls.h  errno.h  fcntl.h  font6x8ext.h  fxcg.h  fxcg_display.h  fxcg_keyboard.h  fxcg_syscalls.h  heap.h  inttypes.h  keyboard.h  keyboard.hpp  keyboard_syscalls.h  limits.h  locale.h  math.h  mcs.hpp  pthread.h  reent.h  rtc.h  (+13 more)
libc/: Makefile  __error.c  __v_scanf.c  arith.h  assert.c  atexit.c  clean.bat  ctype.c  dietfeatures.h  dietstdio.h  dirent.c  fcntl.c  getopt.c  ioctl.c  libc_private.h  locale.c  make.bat  math.c  memalign.c  mman.c  namespace.h  posix.c  printf.c  pwd.c  rand.c  scanf.c  setjmp.S  stat.c  stdio.c  stdlib.c  strcasecmp.c  strerror.c  string.c  strncasecmp.c  strtoll.c  strtoul.c  strtoull.c  termios.c  time.c  un-namespace.h  (+4 more)
libfxcg/: Makefile  clean.bat  make.bat
libm/: _fpmath.h  fdlibm.h  fpmath.h  isnan.c  makefile  s_fpclassify.c  s_isinf.c  sf_fpclassify.c  w_gamma.c  w_lgamma.c  wf_gamma.c  wf_lgamma.c
resources/: BaseOptions.ini  process-mini-sdk-ini.sh
src/: aboutGUI.cpp  aboutGUI.hpp  abs.cpp  add.cpp  adj.cpp  alloc.cpp  append.cpp  arccos.cpp  arccosh.cpp  arcsin.cpp  arcsinh.cpp  arctan.cpp  arctanh.cpp  arg.cpp  atomize.cpp  bake.cpp  besselj.cpp  bessely.cpp  bignum.cpp  binomial.cpp  catalogGUI.cpp  catalogGUI.hpp  ceiling.cpp  choose.cpp  circexp.cpp  clear.cpp  clock.cpp  coeff.cpp  cofactor.cpp  condense.cpp  conj.cpp  cons.cpp  contract.cpp  cos.cpp  cosh.cpp  dConsole.cpp  dConsole.h  data.cpp  decomp.cpp  define.cpp  (+132 more)
toolchain/: Prizm.cmake  base_rules  prizm.ld  prizm.x  prizm_rules  util_rules
(+779 files in other folders)
