#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(null, null, null)
AM_INIT_AUTOMAKE(null, null)
AC_OUTPUT(Makefile src/Makefile)
AC_CONFIG_SRCDIR([src])
# AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
CC=sh3eb-elf-gcc
CXX=sh3eb-elf-g++
EXEEXT=.bin

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
